static/style.css
/* ... */
.save-btn:hover {
    background-color: rgb(92, 193, 255);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.save-btn:active {
    transform: scale(0.97); 
}

.input-group {
    padding-bottom: 1rem;
}

.input-group label {
    font-family: 'Satoshi';
    font-weight: 700;
    font-size: 0.9rem;
    margin-bottom: 0.5rem;
    color: #000000;
}

.input-group input, .input-group select {
    padding: 0.5rem 0.7rem;
    border: 0.1rem solid #dddddd;
    background-color: #f9f9f9;
    border-radius: 0.8rem;
    font-family: 'Satoshi';
    font-size: 0.7rem;
    transition: all 0.2s ease;
    margin-left: 1rem;
}

.input-group input:focus, .input-group select:focus {
    outline: none;
    border-color: rgb(120, 202, 252);
}

.color-picker {
    margin: 1rem 0 0 -1rem;
    align-items: center;
    display: flex;
}

.color-picker-text {
    font-size: 0.8rem;
    margin-left: 1rem;
}

.color-picker input[type="color"] {
    -webkit-appearance: none; 
    appearance: none;
    border: none;
    width: 2rem;
    height: 2rem;
    cursor: pointer;
    background: none; 
    padding: 0;
}

.color-picker input[type="color"]::-webkit-color-swatch-wrapper {
    padding: 0;
}
.color-picker input[type="color"]::-webkit-color-swatch {
    border: 2px solid #e0e0e0;
    border-radius: 50%; 
}

.tasks-container {
    width: auto;
    font-family: 'Satoshi';
    margin-top: 2.5rem;
    background-color: #ffffff;
    border-radius: 1.5rem;
    padding: 2rem;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.tasks-title {
    margin-top: -0.75rem;
    padding: 0 0 1.2rem 0.5rem;
    font-size: 1.5rem;
}

/* task table */
table {
    width: 100%;
    padding-bottom: 3rem;
    border-spacing: 0;
    border-collapse: collapse;
}

.table-headers th {
    text-align: left;
    background-color: rgb(199, 199, 199);
    padding: 0.5rem;
    color: #505050;
}

th:first-child {
    border-top-left-radius: 0.7rem;
    border-bottom-left-radius: 0.7rem;
}

th:last-child {
    border-top-right-radius: 0.7rem;
    border-bottom-right-radius: 0.7rem;
}

.tasks-header {
    padding-left: 2.5rem !important;
}

.tasks td {
    padding: 0.75rem 1rem 0.75rem 0rem;
    color: #000000;
    font-size: 1rem;
    border-bottom: 0.1rem solid #dfdfdf;
}

.tasks-column {
    width: 30%;
}

.task-name {
    padding-left: 2.75rem;
}

.subjects-column {
    width: 25%;
}

.date-column {
    width: 25%;
}

.status-column {
    width: 15%;
}

.task-actions {
    padding-left: 1rem;
}

.tasks-truncate {
    display: inline-block;
    max-width: 10rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    vertical-align: middle;
}

.menu-btn {
    background: none;
    border: none;
    cursor: pointer;
}

.menu-btn:hover {
    background-color: #d8d8d8;
    color: #1e293b;
    border-radius: 50%;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    right: 0;
    background-color: white;
    min-width: 7rem;
    box-shadow: 0px 8px 16px rgba(0,0,0,0.1);
    z-index: 10;
    border-radius: 1rem;
    overflow: hidden;
    border: 1px solid #e2e8f0;
}

.dropdown-content.show {
    display: block;
}

.dropdown-content a {
    color: #000000;
    padding: 0.7rem 1rem;
    text-decoration: none;
    display: flex;
    align-items: center;
    gap: 1rem;
    font-size: 0.9rem;
}

.dropdown-content a:hover {
    background-color: #f3f3f3;
}

.edit-link:hover {
    color: rgb(120, 202, 252);
}

.delete-link:hover {
    color: #ef4444;
}

.pill {
    padding: 0.5rem 1rem;
    border-radius: 2rem;
    display: inline-block;
    white-space: nowrap;
    max-width: 6rem;
    overflow: hidden;
    text-overflow: ellipsis;
    vertical-align: middle;
}

.no-tasks-msg {
    text-align: center;
    margin-top: 1.5rem;
    font-size: 1.3rem;
    color: #666;
    font-weight: 500;
}

.task-count {
    font-family: "Satoshi";
    text-align: right;
    margin-top: 1rem;
    padding-bottom: 2.5rem;
}

.task-summary {
    font-family: 'Satoshi';
    margin: 1.5rem 0 3rem 0;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    width: 100%;
    gap: 2rem;
}

.summary-title {
    font-family: 'Satoshi';
    font-size: 1.3rem;
    font-weight: 600;
    margin-top: -1.5rem;
}

.total-tasks {
    background-color: #ffffff;
    border-radius: 1.5rem;
    width: 70%;
    height: 5rem;
    padding: 2rem;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.task-summary h1 {
    margin-top: -0.5rem;
    font-size: 1.2rem;
}

.incomplete-tasks {
    background-color: #ffffff;
    border-radius: 1.5rem;
    width: 70%;
    height: 5rem;
    padding: 2rem;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.completed-tasks {
    background-color: #ffffff;
    border-radius: 1.5rem;
    width: 70%;
    height: 5rem;
    padding: 2rem;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.overdue-tasks {
    background-color: #ffffff;
    border-radius: 1.5rem;
    width: 70%;
    height: 5rem;
    padding: 2rem;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.task-summary {
    color: #000000;
}

.task-summary span {
    display: block;
    margin-top: 1.3rem;
    font-size: 1.5rem;
    font-weight: 500;
}

.overdue-tasks span {
    color: #df2626;
}

/* error page */
.error-page {
    margin-top: -2rem;
    display: flex;
    flex-direction: column;
    font-family: 'Satoshi';
    align-items: center;
    justify-content: center;
    text-decoration: none;
    height: 100%;
    gap: 2rem;
}

.error-page h1 {
    font-size: 4.5rem;
}

.error-page p {
    font-size: 2rem;
}

.go-home-btn {
    font-size: 1.2rem;
    display: inline-flex;
    transition: 0.1s;
    text-decoration: none; 
    padding: 1rem 1.5rem;
    border-radius: 1.2rem;
    background-color: rgb(120, 202, 252); 
    color: #ffffff;     
    width: 9rem;   
    align-items: center;
    justify-content: center;
    border: none;
    margin-top: 2rem;
    font-weight: 500;
}
/* ... */

